@@ -1,5 +1,7 @@
 2010-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* subr.el (copy-overlay): Handle deleted overlays.
+
 	* man.el (Man-completion-table): Don't signal an error if we can't run
 	manual-program (bug#4056).
 
